Добавил WebP формат изображений в HTML для всех секций

--- a/index.html
+++ b/index.html
@@ -165,18 +165,33 @@
               <picture>
                 <source
                   media="(min-width: 1200px)"
+                  srcset="./images/igor-270.webp 1x, ./images/igor-540.webp 2x"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
                   srcset="./images/igor-270.jpg 1x, ./images/igor-540.jpg 2x"
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/igor-354.webp 1x, ./images/igor-708.webp 2x"
+                  type="image/webp"
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="./images/igor-354.jpg 1x, ./images/igor-708.jpg 2x"
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/igor-450.webp 1x, ./images/igor-900.webp 2x"
+                  type="image/webp"
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="./images/igor-450.jpg 1x, ./images/igor-900.jpg 2x"
-                  type="image/jpg"
+                  type="image/jpeg"
                 />
                 <img src="./images/igor.jpg" alt="Ігор Дем'яненко" />
               </picture>
@@ -217,18 +232,33 @@
               <picture>
                 <source
                   media="(min-width: 1200px)"
+                  srcset="./images/olga-270.webp 1x, ./images/olga-540.webp 2x"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
                   srcset="./images/olga-270.jpg 1x, ./images/olga-540.jpg 2x"
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/olga-354.webp 1x, ./images/olga-708.webp 2x"
+                  type="image/webp"
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="./images/olga-354.jpg 1x, ./images/olga-708.jpg 2x"
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/olga-450.webp 1x, ./images/olga-900.webp 2x"
+                  type="image/webp"
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="./images/olga-450.jpg 1x, ./images/olga-900.jpg 2x"
-                  type="image/jpg"
+                  type="image/jpeg"
                 />
                 <img src="./images/olga.jpg" alt="Ольга Рєпіна" />
               </picture>
@@ -270,10 +300,26 @@
                 <source
                   media="(min-width: 1200px)"
                   srcset="
+                    ./images/mykola-270.webp 1x,
+                    ./images/mykola-540.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
                     ./images/mykola-270.jpg 1x,
                     ./images/mykola-540.jpg 2x
                   "
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/mykola-354.webp 1x,
+                    ./images/mykola-708.webp 2x
+                  "
+                  type="image/webp"
                 />
                 <source
                   media="(min-width: 768px)"
@@ -281,7 +327,15 @@
                     ./images/mykola-354.jpg 1x,
                     ./images/mykola-708.jpg 2x
                   "
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mykola-450.webp 1x,
+                    ./images/mykola-900.webp 2x
+                  "
+                  type="image/webp"
                 />
                 <source
                   media="(max-width: 767px)"
@@ -289,7 +343,7 @@
                     ./images/mykola-450.jpg 1x,
                     ./images/mykola-900.jpg 2x
                   "
-                  type="image/jpg"
+                  type="image/jpeg"
                 />
                 <img src="./images/mykola.jpg" alt="Микола Тарасов" />
               </picture>
@@ -331,10 +385,26 @@
                 <source
                   media="(min-width: 1200px)"
                   srcset="
+                    ./images/mykhailo-270.webp 1x,
+                    ./images/mykhailo-540.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
                     ./images/mykhailo-270.jpg 1x,
                     ./images/mykhailo-540.jpg 2x
                   "
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/mykhailo-354.webp 1x,
+                    ./images/mykhailo-708.webp 2x
+                  "
+                  type="image/webp"
                 />
                 <source
                   media="(min-width: 768px)"
@@ -342,7 +412,15 @@
                     ./images/mykhailo-354.jpg 1x,
                     ./images/mykhailo-708.jpg 2x
                   "
-                  type="image/jpg"
+                  type="image/jpeg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mykhailo-450.webp 1x,
+                    ./images/mykhailo-900.webp 2x
+                  "
+                  type="image/webp"
                 />
                 <source
                   media="(max-width: 767px)"
@@ -350,7 +428,7 @@
                     ./images/mykhailo-450.jpg 1x,
                     ./images/mykhailo-900.jpg 2x
                   "
-                  type="image/jpg"
+                  type="image/jpeg"
                 />
                 <img src="./images/mykhailo.jpg" alt="Михайло Єрмаков" />
               </picture>
@@ -680,7 +758,7 @@
       </div>
     </div>
     <!-- js -->
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/speaker.js"></script>
     <!-- <script src="./js/paddingforbody.js"></script> -->
     <script src="./js/modal.js"></script>
