--- a/portfolio.html
+++ b/portfolio.html
@@ -106,9 +106,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/laptop-370.webp 1x,
+                        ./images/laptop-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/laptop-370.jpg 1x,
                         ./images/laptop-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/laptop-354.webp 1x,
+                        ./images/laptop-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -116,6 +133,15 @@
                         ./images/laptop-354.jpg 1x,
                         ./images/laptop-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/laptop-450.webp 1x,
+                        ./images/laptop-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -123,6 +149,7 @@
                         ./images/laptop-450.jpg 1x,
                         ./images/laptop-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/laptop.jpg" alt="Ноутбук" />
                   </picture>
@@ -145,9 +172,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/players-370.webp 1x,
+                        ./images/players-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/players-370.jpg 1x,
                         ./images/players-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/players-354.webp 1x,
+                        ./images/players-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -155,6 +199,15 @@
                         ./images/players-354.jpg 1x,
                         ./images/players-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/players-450.webp 1x,
+                        ./images/players-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -162,6 +215,7 @@
                         ./images/players-450.jpg 1x,
                         ./images/players-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/players.jpg" alt="Гравці у баскетбол" />
                   </picture>
@@ -186,9 +240,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/seafood-370.webp 1x,
+                        ./images/seafood-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/seafood-370.jpg 1x,
                         ./images/seafood-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/seafood-354.webp 1x,
+                        ./images/seafood-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -196,6 +267,15 @@
                         ./images/seafood-354.jpg 1x,
                         ./images/seafood-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/seafood-450.webp 1x,
+                        ./images/seafood-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -203,6 +283,7 @@
                         ./images/seafood-450.jpg 1x,
                         ./images/seafood-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/seafood.jpg" alt="Ресторан" />
                   </picture>
@@ -225,9 +306,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/headphones-370.webp 1x,
+                        ./images/headphones-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/headphones-370.jpg 1x,
                         ./images/headphones-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/headphones-354.webp 1x,
+                        ./images/headphones-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -235,6 +333,15 @@
                         ./images/headphones-354.jpg 1x,
                         ./images/headphones-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/headphones-450.webp 1x,
+                        ./images/headphones-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -242,6 +349,7 @@
                         ./images/headphones-450.jpg 1x,
                         ./images/headphones-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/headphones.jpg" alt="Навушники" />
                   </picture>
@@ -263,15 +371,43 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
+                      srcset="
+                        ./images/box-370.webp 1x,
+                        ./images/box-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
                       srcset="./images/box-370.jpg 1x, ./images/box-740.jpg 2x"
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/box-354.webp 1x,
+                        ./images/box-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
                       srcset="./images/box-354.jpg 1x, ./images/box-708.jpg 2x"
+                      type="image/jpeg"
+                    />
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/box-450.webp 1x,
+                        ./images/box-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
                       srcset="./images/box-450.jpg 1x, ./images/box-900.jpg 2x"
+                      type="image/jpeg"
                     />
                     <img src="./images/box.jpg" alt="Коробки" />
                   </picture>
@@ -293,15 +429,42 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
+                      srcset="
+                        ./images/mac-370.webp 1x,
+                        ./images/mac-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
                       srcset="./images/mac-370.jpg 1x, ./images/mac-740.jpg 2x"
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/mac-354.webp 1x,
+                        ./images/mac-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
                       srcset="./images/mac-354.jpg 1x, ./images/mac-708.jpg 2x"
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mac-450.webp 1x,
+                        ./images/mac-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
                       srcset="./images/mac-450.jpg 1x, ./images/mac-900.jpg 2x"
+                      type="image/jpeg"
                     />
                     <img src="./images/mac.jpg" alt="Мак" />
                   </picture>
@@ -324,9 +487,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/book-370.webp 1x,
+                        ./images/book-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/book-370.jpg 1x,
                         ./images/book-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/book-354.webp 1x,
+                        ./images/book-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -334,6 +514,16 @@
                         ./images/book-354.jpg 1x,
                         ./images/book-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/book-450.webp 1x,
+                        ./images/book-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -341,6 +531,7 @@
                         ./images/book-450.jpg 1x,
                         ./images/book-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/book.jpg" alt="Книга" />
                   </picture>
@@ -363,9 +554,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/labeltag-370.webp 1x,
+                        ./images/labeltag-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/labeltag-370.jpg 1x,
                         ./images/labeltag-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/labeltag-354.webp 1x,
+                        ./images/labeltag-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -373,6 +581,15 @@
                         ./images/labeltag-354.jpg 1x,
                         ./images/labeltag-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/labeltag-450.webp 1x,
+                        ./images/labeltag-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -380,6 +597,7 @@
                         ./images/labeltag-450.jpg 1x,
                         ./images/labeltag-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/labeltag.jpg" alt="Бірка" />
                   </picture>
@@ -402,9 +620,26 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
+                        ./images/desktop-370.webp 1x,
+                        ./images/desktop-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
                         ./images/desktop-370.jpg 1x,
                         ./images/desktop-740.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/desktop-354.webp 1x,
+                        ./images/desktop-708.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -412,6 +647,15 @@
                         ./images/desktop-354.jpg 1x,
                         ./images/desktop-708.jpg 2x
                       "
+                      type="image/jpeg"
+                    />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/desktop-450.webp 1x,
+                        ./images/desktop-900.webp 2x
+                      "
+                      type="image/webp"
                     />
                     <source
                       media="(max-width: 767px)"
@@ -419,6 +663,7 @@
                         ./images/desktop-450.jpg 1x,
                         ./images/desktop-900.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img src="./images/desktop.jpg" alt="Робочий стіл" />
                   </picture>
@@ -587,7 +832,7 @@
       </div>
     </div>
     <!-- js -->
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
     <!-- <script src="./js/paddingforbody.js"></script> -->
   </body>
 </html>
