--- a/index.html
+++ b/index.html
@@ -692,8 +692,12 @@
                       <use href="./images/sprite.svg#icon-check"></use>
                     </svg>
                   </span>
-                  Погоджуюся з розсилкою та приймаю&nbsp
-                  <a href="./" class="modal-form__link">Умови договору</a>
+                  <span
+                    >Погоджуюся з розсилкою та приймаю&nbsp
+                    <a href="./" class="modal-form__link"
+                      >Умови договору</a
+                    ></span
+                  >
                 </label>
               </div>
             </div>
@@ -758,9 +762,9 @@
       </div>
     </div>
     <!-- js -->
-    <script src="./js/mobile-menu.js"></script>
     <script src="./js/speaker.js"></script>
     <!-- <script src="./js/paddingforbody.js"></script> -->
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
